- add JWT(but no realize in controllers) - add integration with Kinopoisk API - add annotation for Swagger